Update DEV-GUIDELINES.md (#30)
* Update DEV-GUIDELINES.md