@@ -1,1 +1,22 @@
 # Development Guidelines
+
+### Prerequsites
+* [Eclipse Plug-in Development Environment](http://www.eclipse.org/pde/) retrofit via [Marketplace](https://marketplace.eclipse.org/content/eclipse-pde-plug-development-environment) if needed
+* Latest [ADT](https://tools.hana.ondemand.com/#abap)
+* Java 8?
+* Latest [ADT_Backend](https://github.com/abapGit/ADT_Backend) installed on backend ABAP system
+
+### Import
+Via
+File -> Import... -> Projects from Git -> Clone URI
+
+### Compiling
+?
+
+### Guides
+
+[SAP NetWeaver How-To Guide: SDK for the ABAP Development Tools](https://www.sap.com/documents/2013/04/12289ce1-527c-0010-82c7-eda71af511fa.html)
+
+### Troubleshooting
+
+Error `Unrecognized option: --add-modules=ALL-SYSTEM` [stackoverflow](https://stackoverflow.com/questions/46807468/eclipse-wont-open-in-linux-mint-and-java-wont-open-in-different-directories)
